crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__recovery.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "value",
      "args_span": {
        "end_byte": 32,
        "end_column": 16,
        "end_line": 2,
        "start_byte": 27,
        "start_column": 11,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 32,
          "end_column": 16,
          "end_line": 2,
          "start_byte": 27,
          "start_column": 11,
          "start_line": 2
        },
        "text": "value"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROBULATE",
      "keyword_span": {
        "end_byte": 26,
        "end_column": 10,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 32,
        "end_column": 16,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": {
        "kind": "unknown_instruction",
        "message": "unknown instruction keyword `FROBULATE`",
        "span": {
          "end_byte": 26,
          "end_column": 10,
          "end_line": 2,
          "start_byte": 17,
          "start_column": 1,
          "start_line": 2
        }
      },
      "run": null
    },
    {
      "arg": null,
      "args": "value",
      "args_span": {
        "end_byte": 45,
        "end_column": 13,
        "end_line": 3,
        "start_byte": 40,
        "start_column": 8,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 45,
          "end_column": 13,
          "end_line": 3,
          "start_byte": 40,
          "start_column": 8,
          "start_line": 3
        },
        "text": "value"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "123BAD",
      "keyword_span": {
        "end_byte": 39,
        "end_column": 7,
        "end_line": 3,
        "start_byte": 33,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 45,
        "end_column": 13,
        "end_line": 3,
        "start_byte": 33,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": {
        "kind": "malformed_instruction",
        "message": "malformed instruction keyword `123BAD`",
        "span": {
          "end_byte": 39,
          "end_column": 7,
          "end_line": 3,
          "start_byte": 33,
          "start_column": 1,
          "start_line": 3
        }
      },
      "run": null
    }
  ],
  "syntax": null
}
