crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__run_mount.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 30,
        "end_column": 31,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# syntax=docker/dockerfile:1.7"
    }
  ],
  "escape": null,
  "has_buildkit_features": true,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 47,
        "end_column": 17,
        "end_line": 2,
        "start_byte": 36,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 47,
          "end_column": 17,
          "end_line": 2,
          "start_byte": 36,
          "start_column": 6,
          "start_line": 2
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 35,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 47,
        "end_column": 17,
        "end_line": 2,
        "start_byte": 31,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    },
    {
      "arg": null,
      "args": "--mount=type=cache,target=/var/cache/apk,sharing=locked apk add curl",
      "args_span": {
        "end_byte": 120,
        "end_column": 73,
        "end_line": 3,
        "start_byte": 52,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [
        [
          "mount",
          "type=cache,target=/var/cache/apk,sharing=locked"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 120,
          "end_column": 73,
          "end_line": 3,
          "start_byte": 52,
          "start_column": 5,
          "start_line": 3
        },
        "text": "--mount=type=cache,target=/var/cache/apk,sharing=locked apk add curl"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 51,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 48,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [
        {
          "options": [
            [
              "type",
              "cache"
            ],
            [
              "target",
              "/var/cache/apk"
            ],
            [
              "sharing",
              "locked"
            ]
          ],
          "type": "cache"
        }
      ],
      "raw_span": {
        "end_byte": 120,
        "end_column": 73,
        "end_line": 3,
        "start_byte": 48,
        "start_column": 1,
        "start_line": 3
      },
      "run": {
        "flags": [
          [
            "mount",
            "type=cache,target=/var/cache/apk,sharing=locked"
          ]
        ],
        "mounts": [
          {
            "options": [
              [
                "type",
                "cache"
              ],
              [
                "target",
                "/var/cache/apk"
              ],
              [
                "sharing",
                "locked"
              ]
            ],
            "type": "cache"
          }
        ],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 120,
            "end_column": 73,
            "end_line": 3,
            "start_byte": 108,
            "start_column": 61,
            "start_line": 3
          },
          "text": "apk add curl"
        }
      }
    },
    {
      "arg": null,
      "args": "--network=none --security=sandbox echo locked down",
      "args_span": {
        "end_byte": 175,
        "end_column": 55,
        "end_line": 4,
        "start_byte": 125,
        "start_column": 5,
        "start_line": 4
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [
        [
          "network",
          "none"
        ],
        [
          "security",
          "sandbox"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 175,
          "end_column": 55,
          "end_line": 4,
          "start_byte": 125,
          "start_column": 5,
          "start_line": 4
        },
        "text": "--network=none --security=sandbox echo locked down"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 124,
        "end_column": 4,
        "end_line": 4,
        "start_byte": 121,
        "start_column": 1,
        "start_line": 4
      },
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 175,
        "end_column": 55,
        "end_line": 4,
        "start_byte": 121,
        "start_column": 1,
        "start_line": 4
      },
      "run": {
        "flags": [
          [
            "network",
            "none"
          ],
          [
            "security",
            "sandbox"
          ]
        ],
        "mounts": [],
        "network": "none",
        "security": "sandbox",
        "shell": {
          "span": {
            "end_byte": 175,
            "end_column": 55,
            "end_line": 4,
            "start_byte": 159,
            "start_column": 39,
            "start_line": 4
          },
          "text": "echo locked down"
        }
      }
    }
  ],
  "syntax": {
    "image": "docker/dockerfile:1.7",
    "line": 1
  }
}
