crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__simple_instructions.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "run": null
    },
    {
      "args": "/app",
      "args_span": {
        "end_byte": 29,
        "end_column": 13,
        "end_line": 2,
        "start_byte": 25,
        "start_column": 9,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 29,
          "end_column": 13,
          "end_line": 2,
          "start_byte": 25,
          "start_column": 9,
          "start_line": 2
        },
        "text": "/app"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "WORKDIR",
      "keyword_span": {
        "end_byte": 24,
        "end_column": 8,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 29,
        "end_column": 13,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    },
    {
      "args": ". /app",
      "args_span": {
        "end_byte": 41,
        "end_column": 12,
        "end_line": 3,
        "start_byte": 35,
        "start_column": 6,
        "start_line": 3
      },
      "continuations": [],
      "copy": {
        "chmod": null,
        "chown": null,
        "destination": "/app",
        "flags": [],
        "from": null,
        "kind": "copy",
        "sources": [
          "."
        ]
      },
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 41,
          "end_column": 12,
          "end_line": 3,
          "start_byte": 35,
          "start_column": 6,
          "start_line": 3
        },
        "text": ". /app"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "COPY",
      "keyword_span": {
        "end_byte": 34,
        "end_column": 5,
        "end_line": 3,
        "start_byte": 30,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 41,
        "end_column": 12,
        "end_line": 3,
        "start_byte": 30,
        "start_column": 1,
        "start_line": 3
      },
      "run": null
    },
    {
      "args": "[\"echo\", \"hello\"]",
      "args_span": {
        "end_byte": 63,
        "end_column": 22,
        "end_line": 4,
        "start_byte": 46,
        "start_column": 5,
        "start_line": 4
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "json",
        "values": [
          "echo",
          "hello"
        ]
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "CMD",
      "keyword_span": {
        "end_byte": 45,
        "end_column": 4,
        "end_line": 4,
        "start_byte": 42,
        "start_column": 1,
        "start_line": 4
      },
      "line": 4,
      "mounts": [],
      "raw_span": {
        "end_byte": 63,
        "end_column": 22,
        "end_line": 4,
        "start_byte": 42,
        "start_column": 1,
        "start_line": 4
      },
      "run": null
    }
  ],
  "syntax": null
}
