crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__windows_escape.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [
    {
      "line": 1,
      "span": {
        "end_byte": 10,
        "end_column": 11,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "text": "# escape=`"
    }
  ],
  "escape": {
    "character": "`",
    "line": 1
  },
  "has_buildkit_features": false,
  "instructions": [
    {
      "args": "mcr.microsoft.com/windows/nanoserver:ltsc2022",
      "args_span": {
        "end_byte": 61,
        "end_column": 51,
        "end_line": 2,
        "start_byte": 16,
        "start_column": 6,
        "start_line": 2
      },
      "continuations": [],
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 61,
          "end_column": 51,
          "end_line": 2,
          "start_byte": 16,
          "start_column": 6,
          "start_line": 2
        },
        "text": "mcr.microsoft.com/windows/nanoserver:ltsc2022"
      },
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 15,
        "end_column": 5,
        "end_line": 2,
        "start_byte": 11,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 61,
        "end_column": 51,
        "end_line": 2,
        "start_byte": 11,
        "start_column": 1,
        "start_line": 2
      }
    },
    {
      "args": "powershell -Command `\n    Write-Host \"hello\"",
      "args_span": {
        "end_byte": 110,
        "end_column": 23,
        "end_line": 4,
        "start_byte": 66,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [
        {
          "escape": "`",
          "line": 3,
          "span": {
            "end_byte": 87,
            "end_column": 26,
            "end_line": 3,
            "start_byte": 86,
            "start_column": 25,
            "start_line": 3
          }
        }
      ],
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 110,
          "end_column": 23,
          "end_line": 4,
          "start_byte": 66,
          "start_column": 5,
          "start_line": 3
        },
        "text": "powershell -Command `\n    Write-Host \"hello\""
      },
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 65,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 62,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 110,
        "end_column": 23,
        "end_line": 4,
        "start_byte": 62,
        "start_column": 1,
        "start_line": 3
      }
    }
  ],
  "syntax": null
}
